# kse_grid

./: .gitignore  README.md  main.py  pyproject.toml
data/: case2746wop_TAMU_Updated.geojson  case2746wop_TAMU_Updated.m
docs/: GE_Dynamics_Data  PTI_Dynamics_Data.dyr  PTI_Dynamics_Data_gnet.idv  README.md  case2746wop_TAMU_Updated.EPC  case2746wop_TAMU_Updated.RAW  gen_dynamic.aux  pandapower_compendium.md
docs/01-przewodniki/: README.md  energetyczny-blackout-strategie-pse-na-blackstart-.md  kmz-epc-matpower-kompendium.md  pandapower_compendium.md  plan-powerflow-wyspy-blackout.md
docs/02-przewodnik-po-kodzie/: README.md
docs/02-przewodnik-po-kodzie/__init__/: README.md
docs/02-przewodnik-po-kodzie/convert_kse_kmz/: README.md  _strip_diacritics.md  best_match.md  main.md  normalize_name.md  parse_kmz.md
docs/02-przewodnik-po-kodzie/convert_tamu_geo/: README.md  _iter_sections.md  _parse_buses.md  (+3 more)
docs/03-materialy-zrodlowe/: README.md
kse_grid/: __init__.py  builder.py  convert_kse_atlas.py  convert_kse_kmz.py  convert_tamu_geo.py  dash_app.py  debug_convergence.py  element_editing.py  grid.py  matpower.py  models.py  plotting.py  runner.py  serializer.py  switching.py  topology.py  web_server.py
kse_grid/assets/: global.css  graph_interactions.js
kse_grid/ui/: __init__.py  callbacks.py  components.py  context.py  info_card.py  layout.py  theme.py
kse_grid/web/: icons.js  index.html  kse_atlas_points.geojson  main.js  poland_border.geojson  style.css  traces.js
mobile/: .gitignore  README.md  app.json  package.json
mobile/app/: _layout.tsx
(+120 files in other folders)
