[project]
name = "kse-grid"
version = "0.1.0"
description = "Interaktywny plotter sieci elektroenergetycznej dla plików MATPOWER (.m)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "matpowercaseframes>=2.1.0",
    "pandapower>=3.4.0",
    "pandas-stubs~=2.3.3",
]
